--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -530,7 +530,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                         </apex:outputText>
                                     </apex:outputLabel>
                                     <div class="slds-form-element__control">
-                                        <apex:inputText value="{!newEvtReg.Registrant_Street_1__c}" id="street" required="{!IF(CONTAINS(eventPage.Ask_Mailing_Address__c, 'require'),true,false)}" styleClass="slds-input" disabled="{!contactSet}" maxLength="95"/>
+                                        <apex:inputText value="{!newEvtReg.Registrant_Street_1__c}" id="street" required="{!IF(CONTAINS(eventPage.Ask_Mailing_Address__c, 'require'), true, false)}" styleClass="slds-input" disabled="{!contactSet}" maxLength="95"/>
                                     </div>
                                 </div>
                             </div>
@@ -575,7 +575,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                                 </apex:outputText>
                                             </apex:outputLabel>
                                             <div class="slds-form-element__control">
-                                                <apex:inputText value="{!newEvtReg.Registrant_Zip__c}" id="zip" required="true" styleClass="slds-input {!IF(!contactSet,'required requiredText', '')}" disabled="{!contactSet}" maxLength="10"/>
+                                                <apex:inputText value="{!newEvtReg.Registrant_Zip__c}" id="zip" required="{!IF(CONTAINS(eventPage.Ask_Mailing_Address__c, 'require'), true, false)}" styleClass="slds-input {!IF(!contactSet,'required requiredText', '')}" disabled="{!contactSet}" maxLength="10"/>
                                             </div>
                                         </div>
                                     </div>
@@ -589,7 +589,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                                 </apex:outputText>
                                             </apex:outputLabel>
                                             <div class="slds-form-element__control">
-                                                <apex:inputText value="{!newEvtReg.Registrant_City__c}" id="city" required="true" styleClass="slds-input {!IF(!contactSet,'required requiredText', '')}" disabled="{!contactSet}" maxLength="100"/>
+                                                <apex:inputText value="{!newEvtReg.Registrant_City__c}" id="city" required="{!IF(CONTAINS(eventPage.Ask_Mailing_Address__c, 'require'), true, false)}" styleClass="slds-input {!IF(!contactSet,'required requiredText', '')}" disabled="{!contactSet}" maxLength="100"/>
                                             </div>
                                         </div>
                                     </div>
@@ -604,7 +604,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                             </apex:outputLabel>
                                             <div class="slds-form-element__control">
                                                 <div class="slds-select_container">
-                                                    <apex:selectList value="{!newEvtReg.Registrant_State__c}" size="1" id="state" multiselect="false" required="true" styleClass="slds-select {!IF(!contactSet,'required requiredText', '')}" disabled="{!contactSet}">
+                                                    <apex:selectList value="{!newEvtReg.Registrant_State__c}" size="1" id="state" multiselect="false" required="{!IF(CONTAINS(eventPage.Ask_Mailing_Address__c, 'require'), true, false)}" styleClass="slds-select {!IF(!contactSet,'required requiredText', '')}" disabled="{!contactSet}">
                                                         <apex:selectOptions value="{!stateDD}"/>
                                                     </apex:selectList>
                                                 </div>
@@ -625,7 +625,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                                 </apex:outputText>
                                             </apex:outputLabel>
                                             <div class="slds-form-element__control">
-                                                <apex:inputText value="{!newEvtReg.Registrant_City__c}" id="city2" required="true" styleClass="slds-input {!IF(!contactSet,'required requiredText', '')}" disabled="{!contactSet}" maxLength="100"/>
+                                                <apex:inputText value="{!newEvtReg.Registrant_City__c}" id="city2" required="{!IF(CONTAINS(eventPage.Ask_Mailing_Address__c, 'require'), true, false)}" styleClass="slds-input {!IF(!contactSet,'required requiredText', '')}" disabled="{!contactSet}" maxLength="100"/>
                                             </div>
                                         </div>
                                     </div>
